welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:6: error: ')' expected but '}' found.
	}
        ^